--- a/resources/views/Frontend/events/event-register.html
+++ b/resources/views/Frontend/events/event-register.html
@@ -82,7 +82,7 @@
                                 <li><a href="seminar.html">Seminar</a></li>
                                 <li><a href="events.html">Events</a></li>
                                 <li><a href="event-details.html">Event details</a></li>
-                                <li><a href="/event/registration">Event register</a></li>
+                                <li><a href="event-register.html">Event register</a></li>
                                 <li><a href="contact-us.html">Contact us</a></li>
                             </ul>
                             <h4>User Profile</h4>
@@ -266,7 +266,7 @@
 														<li><a href="departments.html">Departments</a></li>
 														<li><a href="events.html">events</a></li>
 														<li><a href="event-details.html">event details</a></li>
-														<li><a href="/event/registration">event register</a></li>
+														<li><a href="event-register.html">event register</a></li>
                                                     </ul>
                                                 </div>
                                                 <div class="mm1-com mm1-cour-com mm1-s3">
@@ -407,132 +407,62 @@
     </section>
     <!--END HEADER SECTION-->
 
-    <!--SECTION START-->
-    <section>
-        <div class="container com-sp">
-            <div class="row">
-                <div class="cor about-sp">
-                    <div class="ed-about-tit">
-                        <div class="con-title">
-                            <h2>College <span> Events</span></h2>
-                            <p>Fusce id sem at ligula laoreet hendrerit venenatis sed purus. Ut pellentesque maximus lacus, nec pharetra augue.</p>
-                        </div>
-                        <div>
-                            <div class="ho-event pg-eve-main">
-                                <ul>
-                                    <li>
-                                        <div class="ho-ev-date pg-eve-date"><span>07</span><span>jan,2018</span>
-                                        </div>
-                                        <div class="ho-ev-link pg-eve-desc">
-                                            <a href="/event/registration">
-                                                <h4>Latinoo College Expo 2018 - DONATION</h4>
-                                            </a>
-                                            <p>Nulla at velit convallis, venenatis lacus quis, efficitur lectus.</p>
-                                            <span>9:15 am – 5:00 pm</span>
-                                        </div>
-                                        <div class="pg-eve-reg">
-                                            <a href="/event/registration">Register</a><a href="event-details.html">Read more</a>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="ho-ev-date pg-eve-date"><span>12</span><span>feb,2018</span>
-                                        </div>
-                                        <div class="ho-ev-link pg-eve-desc">
-                                            <a href="/event/registration">
-                                                <h4>Training at Team Fabio Clemente</h4>
-                                            </a>
-                                            <p>Nulla at velit convallis, venenatis lacus quis, efficitur lectus.</p>
-                                            <span>9:15 am – 5:00 pm</span>
-                                        </div>
-                                        <div class="pg-eve-reg">
-                                            <a href="/event/registration">Register</a><a href="event-details.html">Read more</a>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="ho-ev-date pg-eve-date"><span>26</span><span>apr,2018</span>
-                                        </div>
-                                        <div class="ho-ev-link pg-eve-desc">
-                                            <a href="/event/registration">
-                                                <h4>Weekly Breakdance Practice</h4>
-                                            </a>
-                                            <p>Nulla at velit convallis, venenatis lacus quis, efficitur lectus.</p>
-                                            <span>9:15 am – 5:00 pm</span>
-                                        </div>
-                                        <div class="pg-eve-reg">
-                                            <a href="/event/registration">Register</a><a href="event-details.html">Read more</a>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="ho-ev-date pg-eve-date"><span>18</span><span>sep,2018</span>
-                                        </div>
-                                        <div class="ho-ev-link pg-eve-desc">
-                                            <a href="/event/registration">
-                                                <h4>Admissions Information Session and Tour</h4>
-                                            </a>
-                                            <p>Nulla at velit convallis, venenatis lacus quis, efficitur lectus.</p>
-                                            <span>9:15 am – 5:00 pm</span>
-                                        </div>
-                                        <div class="pg-eve-reg">
-                                            <a href="/event/registration">Register</a><a href="event-details.html">Read more</a>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="ho-ev-date pg-eve-date"><span>07</span><span>nov,2018</span>
-                                        </div>
-                                        <div class="ho-ev-link pg-eve-desc">
-                                            <a href="/event/registration">
-                                                <h4>CUNY Assessment Test Workshop</h4>
-                                            </a>
-                                            <p>Nulla at velit convallis, venenatis lacus quis, efficitur lectus.</p>
-                                            <span>9:15 am – 5:00 pm</span>
-                                        </div>
-                                        <div class="pg-eve-reg">
-                                            <a href="/event/registration">Register</a><a href="event-details.html">Read more</a>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="ho-ev-date pg-eve-date"><span>18</span><span>sep,2018</span>
-                                        </div>
-                                        <div class="ho-ev-link pg-eve-desc">
-                                            <a href="/event/registration">
-                                                <h4>Fire & ice launch party</h4>
-                                            </a>
-                                            <p>Nulla at velit convallis, venenatis lacus quis, efficitur lectus.</p>
-                                            <span>9:15 am – 5:00 pm</span>
-                                        </div>
-                                        <div class="pg-eve-reg">
-                                            <a href="/event/registration">Register</a><a href="event-details.html">Read more</a>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="ho-ev-date pg-eve-date"><span>07</span><span>nov,2018</span>
-                                        </div>
-                                        <div class="ho-ev-link pg-eve-desc">
-                                            <a href="/event/registration">
-                                                <h4>Educate to Empower NYE Party</h4>
-                                            </a>
-                                            <p>Nulla at velit convallis, venenatis lacus quis, efficitur lectus.</p>
-                                            <span>9:15 am – 5:00 pm</span>
-                                        </div>
-                                        <div class="pg-eve-reg">
-                                            <a href="/event/registration">Register</a><a href="event-details.html">Read more</a>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="pg-pagina">
-                            <ul class="pagination">
-                                <li class="disabled"><a href="#!"><i class="fa fa-angle-left" aria-hidden="true"></i></a></li>
-                                <li class="active"><a href="#!">1</a></li>
-                                <li class="waves-effect"><a href="#!">2</a></li>
-                                <li class="waves-effect"><a href="#!">3</a></li>
-                                <li class="waves-effect"><a href="#!">4</a></li>
-                                <li class="waves-effect"><a href="#!">5</a></li>
-                                <li class="waves-effect"><a href="#!"><i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
-                            </ul>
 
-                        </div>
+    <!--SECTION START-->
+    <section class="c-all p-semi p-event">
+        <div class="semi-inn">
+            <div class="semi-com semi-left">
+                <div class="all-title quote-title qu-new semi-text eve-reg-text">
+                    <h2>College Expo</h2>
+                    <p>Fusce purus mauris, blandit vitae purus eget, viverra volutpat nibh. Nam in elementum nisi, a placerat nisi. Quisque ullamcorper magna in odio rhoncus semper.Sed nec ultricies velit. Aliquam non massa id enim ultrices aliquet a ac
+                        tortor.</p>
+                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <div class="semi-deta eve-deta">
+                        <ul>
+                            <li>DATE:<span>Jan 01, 2018</span></li>
+                            <li>Time:<span>02:00 PM GMT</span></li>
+                            <li>Topic:<span>Feature Technology</span></li>
+                            <li>Location:<span>illinois, united states</span></li>
+                        </ul>
+                    </div>
+                    <p class="help-line">Join this for free!</p>
+                </div>
+            </div>
+            <div class="semi-com semi-right">
+                <div class="n-form-com semi-form">
+                    <div class="col s12">
+                        <form class="form-horizontal">
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <input type="text" class="form-control" placeholder="Name" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <input type="number" class="form-control" placeholder="Phone number" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <input type="email" class="form-control" placeholder="Email id" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <input type="text" class="form-control" placeholder="City">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-12">
+                                    <input type="text" class="form-control" placeholder="Country">
+                                </div>
+                            </div>
+                            <div class="form-group mar-bot-0">
+                                <div class="col-md-12">
+                                    <i class="waves-effect waves-light light-btn waves-input-wrapper" style=""><input type="submit" value="APPLY NOW" class="waves-button-input"></i>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
